// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runner component renders "checking status" 1`] = `
<Blueprint3.Button
  className="button-run"
  disabled={true}
  icon={
    <Blueprint3.Spinner
      size={16}
    />
  }
  text="Checking status"
/>
`;

exports[`Runner component renders default 1`] = `
<Blueprint3.Button
  className="button-run"
  icon="play"
  onClick={[MockFunction]}
  text="Run"
/>
`;

exports[`Runner component renders downloading 1`] = `
<Blueprint3.Button
  className="button-run"
  disabled={true}
  icon={
    <Blueprint3.Spinner
      size={16}
    />
  }
  text="Downloading"
/>
`;

exports[`Runner component renders running 1`] = `
<Blueprint3.Button
  active={true}
  className="button-run"
  icon="stop"
  onClick={[MockFunction]}
  text="Stop"
/>
`;
